Remove deprecated code from OCSP and CRL util